user update method and validation
