# main.go
@@ -1,6 +1,7 @@
 package main
 
 import (
+	"database/sql"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -39,6 +40,9 @@ func main() {
 	{
 		v1.GET("/users", getUsers)
 		v1.POST("/users", createUser)
+		v1.GET("/users/:id", getUserDetail)
+		v1.PUT("/users/:id", updateUser)
+		v1.DELETE("/users/:id", deleteUser)
 	}
 
 	r.Run(":9000")
@@ -111,7 +115,7 @@ func createUser(c *gin.Context) {
 	}
 
 	// Insert user into database
-	result, err := database.DB.Exec("INSERT INTO users (name, email, password) VALUES (?, ?, ?)", req.Name, req.Email, string(hashedPassword))
+	result, err := database.DB.Exec("INSERT INTO users SET name = ?, email = ?, password = ?", req.Name, req.Email, string(hashedPassword))
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -126,4 +130,115 @@ func createUser(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusCreated, res)
+}
+
+// @Tags Users
+// @Summary Get user detail
+// @Description Get detail information of a specific user by ID
+// @Router /users/{id} [get]
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Success 200 {object} user.UserDetailResponse
+// @Failure 400
+// @Failure 404
+// @Failure 500
+func getUserDetail(c *gin.Context) {
+	id := c.Param("id")
+
+	var res user.UserDetailResponse
+	err := database.DB.QueryRow("SELECT id, name, email FROM users WHERE id = ?", id).Scan(&res.ID, &res.Name, &res.Email)
+	if err != nil {
+		if err == sql.ErrNoRows {
+			c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+	}
+
+	c.JSON(http.StatusOK, res)
+}
+
+// @Tags Users
+// @Summary Update user
+// @Description Update user data by ID
+// @Router /users/{id} [put]
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Param user body user.UserDetailRequest true "Updated user data"
+// @Success 200 {object} user.UserUpdateResponse
+// @Failure 400
+// @Failure 404
+// @Failure 500
+func updateUser(c *gin.Context) {
+	id := c.Param("id")
+
+	var req user.UserDetailRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	// Update user in database
+	result, err := database.DB.Exec("UPDATE users SET name = ?, email = ? WHERE id = ?", req.Name, req.Email, id)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	rowsAffected, err := result.RowsAffected()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	if rowsAffected == 0 {
+		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+		return
+	}
+
+	// Response with updated user
+	res := user.UserUpdateResponse{
+		ID:    id,
+		Name:  req.Name,
+		Email: req.Email,
+	}
+
+	c.JSON(http.StatusOK, res)
+
+}
+
+// @Tags Users
+// @Sumarry Delete a user
+// @Description Delete a user from the database by ID
+// @Router /users/{id} [delete]
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Success 204
+// @Failure 400
+// @Failure 404
+// @Failure 500
+func deleteUser(c *gin.Context) {
+	id := c.Param("id")
+
+	rowsAffected, err := database.DB.Exec("DELETE FROM users WHERE id = ?", id)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	count, err := rowsAffected.RowsAffected()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	if count == 0 {
+		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+		return
+	}
+
+	c.Status(http.StatusNoContent)
 }
